Block Title Fixes
Moving of the block heading style class to the proper places allows the increase based on options picked (hero/supersize) to work correctly and not become gigantic.

Added in the correct normal/bold options if hero strong or supersize bold is chosen.

By default the hero and supersize should not be bolded.

--- a/css/block/block-styles.css
+++ b/css/block/block-styles.css
@@ -3,8 +3,12 @@
   display: flex;
 }
 
-.block-title {
-  font-size: 200%
+.block-title.hero, .block-title.supersize {
+  font-weight: normal;
+}
+
+.block-title.strong, .block-title.bold {
+  font-weight: bold;
 }
 
 .bs-title-scale-decrease .block-title .block-title-text {
