--- a/templates/block/block--ucb-article-slider.html.twig
+++ b/templates/block/block--ucb-article-slider.html.twig
@@ -186,11 +186,11 @@
 	{{ title_prefix }}
 	{% if label %}
 		<div class="block-title-outer">
-				<{{ headingTag }}{{title_attributes}} class="block-title">
+				<{{ headingTag }}{{title_attributes}} class="block-title {{ headingStyle }}">
 					<span class='block-title-icon {{ iconColor }} {{ iconPosition }} {{ iconSize }}'>
 						{{ content.field_bs_icon }}
 					</span>
-					<span class="block-title-text {{ headingStyle }}">
+					<span class="block-title-text">
 						{{ label }}
 					</span>
 				</{{ headingTag }}>
