--- a/css/block/hero-unit.css
+++ b/css/block/hero-unit.css
@@ -78,6 +78,7 @@
 .ucb-hero-unit-video-wrapper {
   position: absolute;
   display: block;
+  overflow: hidden;
 }
 
 .ucb-hero-unit-video-player-wrapper {
@@ -137,7 +138,6 @@
 } */
 
 .ucb-hero-unit-video {
-  aspect-ratio: 16 / 9;
   display: flex;
   align-items: center;
   position: relative;
@@ -156,15 +156,6 @@
   height: 100%;
 }
 
-.ucb-hero-unit-video-player-wrapper {
-  width: 100%;
-  height: 100%;
-}
-
-.ucb-hero-unit-video-player-wrapper iframe {
-  width: 100%;
-  height: 100%;
-}
 
 .ucb-post-wide-title-region .block-hero-unit .block:first-child, .ucb-below-post-wide-region .block-hero-unit .block:first-child {
   padding-top: 0;
