Remove box shadow

--- a/css/menu-styles/shadow-styles.css
+++ b/css/menu-styles/shadow-styles.css
@@ -10,6 +10,7 @@
 
   section.ucb-main-nav-section {
     background-color: #444;
+    box-shadow: none;
   }
 
   .ucb-main-menu li.menu-item a.nav-link {
