--- a/css/ucb-print.css
+++ b/css/ucb-print.css
@@ -104,20 +104,14 @@ img.print-logo {
 /* HIDE FROM PRINTING */
 .hide-print,
 /*mobile values*/
-#mobile-menu-toggle,
+#ucb-mobile-menu-toggle,
 #toggle,
 #alerts-wide-wrapper,
-#search,
-.search-toggle-wrapper,
 #secondary-menu-wrapper,
 #main-menu-wrapper,
 #block-boulder-base-main-menu,
 #mobile-navigation-wrapper,
 .sidebar,
-#after-content-wrapper,
-#after-content2-wrapper,
-#footer-wrapper,
-#footer-menu-wrapper,
 #backstretch,
 #breadcrumb,
 .breadcrumb-wrapper,
@@ -134,6 +128,12 @@ a.print-link,
 .cu-share-inline-mobile,
 #cu-feedback,
 #sticky-menu,
+.ucb-search-link,
+.ucb-lang-select,
+.ucb-homepage-footer,
+.ucb-footer-top,
+.ucb-footer-menu-region,
+.ucb-below-content-region,
 .ucb-brand-bar,
 .ucb-brand-bar-controls,
 header.ucb-dark,
