--- a/css/style.css
+++ b/css/style.css
@@ -298,6 +298,9 @@ section.ucb-main-nav-section {
 .ucb-intro-wide-region .block {
   margin-bottom: 0;
 }
+.ucb-intro-wide-region {
+  background-color: #000;
+}
 /*********** Main Menu **************/
 ul.ucb-main-menu.nav {
   flex-grow: 1;
