remove space and replace with padding

--- a/css/ucb-person.css
+++ b/css/ucb-person.css
@@ -32,7 +32,9 @@ ul.ucb-person-phone-numbers {
   color: #111;
   margin: 0;
 }
-
+.ucb-person-email-icon {
+  padding-right: 5px;
+}
 a.ucb-person-social-link i.fa-solid,
 a.ucb-person-social-link i.fa-brands {
   color: #111;
