--- a/templates/field/field--field-ucb-person-email.html.twig
+++ b/templates/field/field--field-ucb-person-email.html.twig
@@ -5,12 +5,12 @@
 #}
 {% if items %}
 <div>
-	<ul class="ucb-person-email-address">
-		{% for item in items %}{% set value = item.content['#context'].value|trim %}
-		<li>
-			<i class="fa-solid fa-envelope"></i>&nbsp;<a itemprop="email" href="mailto:{{ value|url_encode }}">{{ value }}</a>
-		</li>
-		{% endfor %}
-	</ul>
+    <ul class="ucb-person-email-address">
+        {% for item in items %}{% set value = item.content['#context'].value|trim %}
+        <li>
+            <i class="fa-solid fa-envelope ucb-person-email-icon"></i><a itemprop="email" href="mailto:{{ value|url_encode }}">{{ value }}</a>
+        </li>
+        {% endfor %}
+    </ul>
 </div>
 {% endif %}
