--- a/templates/layout/page.html.twig
+++ b/templates/layout/page.html.twig
@@ -207,8 +207,10 @@
       {# link is in html.html.twig #}
       <div class="layout-content">
         {% if page.intro_wide|render %}
-          <div class="ucb-intro-wide-region edge-to-edge row g-0">
+          <div class="ucb-intro-wide-region edge-to-edge g-0">
+           <div class = "ucb-layout-container container">
             {{ page.intro_wide }}
+            </div>
           </div>
         {% endif %}
         {% if page.post_wide_title|render %}
