add white text color

--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,7 @@ section.ucb-main-nav-section {
 }
 .ucb-intro-wide-region {
   background-color: #000;
+  color: #fff;
 }
 /*********** Main Menu **************/
 ul.ucb-main-menu.nav {
