--- a/css/block/slider.css
+++ b/css/block/slider.css
@@ -2,56 +2,57 @@
  * CSS for slider block
  */
 
-.ucb-slider-block{
+.ucb-slider-block {
   width: 100%;
 }
+
 /* Bootstrap Carousel overrides */
-.carousel-control-next,
-.carousel-control-prev {
+.ucb-slider-block .carousel-control-next,
+.ucb-slider-block .carousel-control-prev {
   width: 5%;
   opacity: 1;
 }
 
 /* sizes */
-img {
+.ucb-slider-block img {
   width: 100%;
   object-fit: cover;
 }
 
-.size-ultrawide img {
+.ucb-slider-block.size-ultrawide img {
   max-height: 600px;
   max-width: 1600px;
 }
 
-.size-widescreen img {
+.ucb-slider-block.size-widescreen img {
   max-height: 900px;
   max-width: 1600px;
 }
 
-.size-threetwo img {
+.ucb-slider-block.size-threetwo img {
   max-height: 1000px;
   max-width: 1500px;
 }
 
-.size-large img {
+.ucb-slider-block.size-large img {
   max-height: 70vh;
 }
 
 /* text position */
-a.slide-link {
+.ucb-slider-block a.slide-link {
   color: white;
 }
 
-.carousel-caption {
+.ucb-slider-block .carousel-caption {
   padding: 1em;
 }
 
-.carousel-inner .carousel-caption {
+.ucb-slider-block .carousel-inner .carousel-caption {
   position: absolute;
   font-size: 14px;
 }
 
-.bottom-overlay .carousel-inner .carousel-caption {
+.ucb-slider-block.bottom-overlay .carousel-inner .carousel-caption {
   top: auto;
   background-color: rgba(0, 0, 0, 0.7);
   right: 0;
@@ -59,7 +60,7 @@ a.slide-link {
   text-align: left;
 }
 
-.right-overlay .carousel-inner .carousel-caption {
+.ucb-slider-block.right-overlay .carousel-inner .carousel-caption {
   top: 0;
   right: 0;
   left: 70%;
@@ -68,7 +69,7 @@ a.slide-link {
   padding: 1rem;
 }
 
-.center-overlay .carousel-inner .carousel-caption {
+.ucb-slider-block.center-overlay .carousel-inner .carousel-caption {
   top: 0;
   left: 0;
   right: 0;
@@ -76,7 +77,7 @@ a.slide-link {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.right-content .carousel-inner .carousel-caption {
+.ucb-slider-block.right-content .carousel-inner .carousel-caption {
   right: 0;
   left: 0;
   text-align: left;
@@ -86,33 +87,33 @@ a.slide-link {
   width: 100%;
 }
 
-.right-content .slide-image-container {
+.ucb-slider-block.right-content .slide-image-container {
   padding-bottom: 0px;
 }
 
-.right-content .carousel-inner {
+.ucb-slider-block.right-content .carousel-inner {
   display: flex;
 }
 
-.right-content .carousel-item.active,
-.carousel-item.carousel-item-next.carousel-item-start,
-.carousel-item.carousel-item-next.carousel-item-end,
-.carousel-item.carousel-item-prev.carousel-item-start,
-.carousel-item.carousel-item-prev.carousel-item-end {
+.ucb-slider-block.right-content .carousel-item.active,
+.ucb-slider-block .carousel-item.carousel-item-next.carousel-item-start,
+.ucb-slider-block .carousel-item.carousel-item-next.carousel-item-end,
+.ucb-slider-block .carousel-item.carousel-item-prev.carousel-item-start,
+.ucb-slider-block .carousel-item.carousel-item-prev.carousel-item-end {
   display: flex;
   flex-direction: row;
 }
 
-.content-right .carousel-caption {
+.ucb-slider-block.content-right .carousel-caption {
   position: relative;
 }
 
-.slide-image-container {
+.ucb-slider-block .slide-image-container {
   flex-grow: 1;
   padding-bottom: 20px;
 }
 
-.bottom-content .carousel-inner .carousel-caption {
+.ucb-slider-block.bottom-content .carousel-inner .carousel-caption {
   background-color: var(--ucb-darker);
   right: 0;
   left: 0;
@@ -120,7 +121,7 @@ a.slide-link {
   position: relative;
 }
 
-.right-overlay .slide-text-container {
+.ucb-slider-block.right-overlay .slide-text-container {
   display: flex;
   height: 100%;
   width: 100%;
@@ -128,7 +129,7 @@ a.slide-link {
   justify-content: center;
 }
 
-.center-overlay .slide-text-container {
+.ucb-slider-block.center-overlay .slide-text-container {
   margin: auto;
   justify-content: center;
   display: flex;
@@ -137,39 +138,39 @@ a.slide-link {
   max-width: calc(100% - 100px);
 }
 
-.carousel-inner a:hover {
+.ucb-slider-block .carousel-inner a:hover {
   cursor: pointer;
 }
 
-.carousel-control-prev-icon,
-.carousel-control-next-icon {
+.ucb-slider-block .carousel-control-prev-icon,
+.ucb-slider-block .carousel-control-next-icon {
   border-radius: 100px;
   width: 3rem;
   height: 3rem;
   background-size: 75% 75%;
 }
 
-.carousel-control-next-icon {
+.ucb-slider-block .carousel-control-next-icon {
   background-position: 60%;
 }
 
-.carousel-control-prev-icon {
+.ucb-slider-block .carousel-control-prev-icon {
   background-position: 30%;
 }
 
-.carousel-control-prev-icon:hover,
-.carousel-control-next-icon:hover {
+.ucb-slider-block .carousel-control-prev-icon:hover,
+.ucb-slider-block .carousel-control-next-icon:hover {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
-a.slide-link i.fa,
-a.slide-link i.fab {
+.ucb-slider-block a.slide-link i.fa,
+.ucb-slider-block a.slide-link i.fab {
   color: #aaa;
 }
 
 /* media queries */
 @media screen and (max-width: 992px) {
-  .right-content .carousel-inner .carousel-caption {
+  .ucb-slider-block.right-content .carousel-inner .carousel-caption {
     max-width: 100%;
     width: 100%;
     top: auto;
@@ -181,25 +182,28 @@ a.slide-link i.fab {
     position: relative;
   }
 
-  .right-content .carousel-inner {
+  .ucb-slider-block.right-content .carousel-inner {
     display: block;
   }
 
-  .right-content .carousel-item.active,
-  .carousel-item.carousel-item-next.carousel-item-start,
-  .carousel-item.carousel-item-next.carousel-item-end,
-  .carousel-item.carousel-item-prev.carousel-item-start,
-  .carousel-item.carousel-item-prev.carousel-item-end {
+  .ucb-slider-block.right-content .carousel-item.active,
+  .ucb-slider-block .carousel-item.carousel-item-next.carousel-item-start,
+  .ucb-slider-block .carousel-item.carousel-item-next.carousel-item-end,
+  .ucb-slider-block .carousel-item.carousel-item-prev.carousel-item-start,
+  .ucb-slider-block .carousel-item.carousel-item-prev.carousel-item-end {
     display: block;
     flex-direction: row;
   }
-  .slide-image-container {
+
+  .ucb-slider-block .slide-image-container {
     padding-bottom: 0px;
   }
-  .carousel-caption {
+
+  .ucb-slider-block .carousel-caption {
     width: 100%;
   }
-  .right-overlay.ucb-slider-block .carousel-caption {
+
+  .ucb-slider-block.right-overlay .carousel-caption {
     height: 100%;
     width: auto;
     font-size: 75%;
@@ -207,11 +211,11 @@ a.slide-link i.fab {
 }
 
 @media screen and (max-width: 768px) {
-  .bottom-overlay .carousel-inner .carousel-caption,
-  .right-overlay .carousel-inner .carousel-caption,
-  .center-overlay .carousel-inner .carousel-caption,
-  .right-content .carousel-inner .carousel-caption,
-  .bottom-content .carousel-inner .carousel-caption {
+  .ucb-slider-block.bottom-overlay .carousel-inner .carousel-caption,
+  .ucb-slider-block.right-overlay .carousel-inner .carousel-caption,
+  .ucb-slider-block.center-overlay .carousel-inner .carousel-caption,
+  .ucb-slider-block.right-content .carousel-inner .carousel-caption,
+  .ucb-slider-block.bottom-content .carousel-inner .carousel-caption {
     max-width: 100%;
     top: auto;
     bottom: 0;
@@ -222,7 +226,7 @@ a.slide-link i.fab {
     position: relative;
   }
 
-  .carousel-inner .carousel-caption {
+  .ucb-slider-block .carousel-inner .carousel-caption {
     top: auto;
     bottom: 0;
     background-color: var(--ucb-darker);
@@ -230,43 +234,45 @@ a.slide-link i.fab {
     left: 0;
     text-align: left;
   }
-  .carousel-caption {
+
+  .ucb-slider-block .carousel-caption {
     width: 100%;
   }
-  .right-overlay.ucb-slider-block .carousel-caption {
+
+  .ucb-slider-block.right-overlay .carousel-caption {
     height: 100%;
     width: auto;
   }
 }
 
 @media screen and (max-width:576px) {
-  .right-content .carousel-item-structure {
+  .ucb-slider-block.right-content .carousel-item-structure {
     display: flex;
     flex-direction: column !important;
   }
 }
 
-.right-content .carousel-item-structure {
+.ucb-slider-block.right-content .carousel-item-structure {
   display: flex;
   flex-direction: row;
   width: 100%;
   background-color: var(--ucb-darker);
 }
 
-.center-overlay .carousel-item-structure,
-.right-overlay .carousel-item-structure,
-.bottom-overlay .carousel-item-structure,
-.bottom-content .carousel-item-structure {
+.ucb-slider-block.center-overlay .carousel-item-structure,
+.ucb-slider-block.right-overlay .carousel-item-structure,
+.ucb-slider-block.bottom-overlay .carousel-item-structure,
+.ucb-slider-block.bottom-content .carousel-item-structure {
   display: flex;
   flex-direction: column;
   width: 100%;
 }
 
-.slide-image-container img{
+.ucb-slider-block .slide-image-container img {
   padding-bottom: 0px;
 }
 
-.ucb-edge-to-edge .carousel-item img {
+.ucb-edge-to-edge .ucb-slider-block .carousel-item img {
   max-width: 100%;
   width: 100%;
   min-width: 100%;
