--- a/templates/regions/region--site-information.html.twig
+++ b/templates/regions/region--site-information.html.twig
@@ -23,8 +23,8 @@
         <div class="ucb-footer">
           <p><a href="https://www.colorado.edu"><img alt="Be Boulder." class="ucb-footer-be-boulder" src="https://cdn.colorado.edu/static/brand-assets/live/images/be-boulder-white.svg" style="max-width:240px; height:auto;"></a></p>
           <p><a class="ucb-home-link" href="https://www.colorado.edu">University of Colorado Boulder</a></p>
-          <p>&copy; Regents of the University of Colorado</p>
-          <p class="ucb-info-footer-links"><a href="https://www.colorado.edu/compliance">Privacy</a> &bull; <a href="https://www.colorado.edu/about/legal-trademarks">Legal &amp; Trademarks</a> &bull; <a href="https://www.colorado.edu/map">Campus Map</a></p>
+          <p class = "ucb-site-information-print">© Regents of the University of Colorado</p>
+          <p class="ucb-info-footer-links"><a href="http://www.colorado.edu/about/privacy-statement">Privacy</a> • <a href="http://www.colorado.edu/about/legal-trademarks">Legal &amp; Trademarks</a> • <a href="http://www.colorado.edu/map">Campus Map</a></p>
         </div>
       </div>
     </div>
