--- a/templates/regions/region--site-information.html.twig
+++ b/templates/regions/region--site-information.html.twig
@@ -27,6 +27,12 @@
           <p class="ucb-info-footer-links"><a href="http://www.colorado.edu/about/privacy-statement">Privacy</a> • <a href="http://www.colorado.edu/about/legal-trademarks">Legal &amp; Trademarks</a> • <a href="http://www.colorado.edu/map">Campus Map</a></p>
         </div>
       </div>
+      <div class="col-log-4 col-md-4 col-sm-6 col-xs-12">
+        <div class="ucb-footer-print">
+          <p><a class="ucb-home-link" href="https://www.colorado.edu">University of Colorado Boulder</a></p>
+          <p class = "ucb-site-information-print">© Regents of the University of Colorado</p>
+        </div>
+      </div>
     </div>
   {% else %}
     {{ content }}
