Sidebar/Title Spacing Fixes
Sidebar and Title spacing changes are fixed so that they align.
The Title's container is what is aligned properly rather than the text in most cases as the font has a line-height that adds a little more padding around the text.
Kevin wants the containers aligned and less focus on aligning the text.

--- a/css/ucb-menu.css
+++ b/css/ucb-menu.css
@@ -202,8 +202,11 @@
   }
 }
 
-.ucb-page-content .ucb-system-menu-block {
-  margin-top: 20px;
+.ucb-sidebar .ucb-system-menu-block {
+  --bs-gutter-y: 3rem;
+  padding-top: 0;
+  padding-bottom: calc(var(--bs-gutter-y) * .5);
+  margin-bottom: calc(var(--bs-gutter-y) *.5);
 }
 
 .ucb-page-content .ucb-menu {
