--- a/css/style.css
+++ b/css/style.css
@@ -54,8 +54,9 @@ body {
 }
 
 .ucb-content-wrapper {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  --bs-gutter-y: 3rem;
+  margin-top: calc(var(--bs-gutter-y)* .5);
+  margin-bottom: calc(var(--bs-gutter-y)* .5);
 }
 
 main {
