--- a/templates/regions/region--site-information.html.twig
+++ b/templates/regions/region--site-information.html.twig
@@ -28,7 +28,7 @@
         </div>
       </div>
         <div class="ucb-footer-print">
-          <p><a class="ucb-home-link" href="https://www.colorado.edu">University of Colorado Boulder</a></p>
+          <p><a class="ucb-home-link ucb-site-information-print-title" href="https://www.colorado.edu">University of Colorado Boulder</a></p>
           <p class = "ucb-site-information-print">© Regents of the University of Colorado</p>
         </div>
     </div>
