--- a/templates/navigation/menu--extras.html.twig
+++ b/templates/navigation/menu--extras.html.twig
@@ -40,9 +40,9 @@
 
         <li{{ item.attributes.addClass(classes) }}>
 <div class="ucb-mega-menu-wrapper">
-    <h2 class= "ucb-mega-menu-header">{{item.content.field_mega_menu_select.0.content.field_mega_menu_heading|render}}</h2>
-    </div>
+    <h2 class= "ucb-mega-menu-header">{{dump(item.content.field_mega_menu_select.0.content.field_mega_menu_heading)}}</h2>
         {{item.content.field_mega_menu_select}}
+    </div>
           {% if item.title|upper == 'HOME' %}
             <a{{ create_attribute({ href: item.url|render, class: 'ucb-home-button nav-link', title: item.title }) }}>
               <i class="fa-solid fa-home"></i>
