--- a/templates/block/block--mega_menu.html.twig
+++ b/templates/block/block--mega_menu.html.twig
@@ -1,6 +1,9 @@
-{{ attach_library('boulder_base/ucb-mega-menu-block') }}
+
+{% block content %}
     <div class="ucb-mega-menu-column-wrapper">
         {{content.field_mega_menu_text_above|render}}
         {{content.field_mega_menu_menu_links}}
     </div>
     {{content.field_mega_menu_text_below|render}}
+
+{% endblock %}
